Client ent fixes

--- a/todo.txt
+++ b/todo.txt
@@ -7,3 +7,7 @@
  - Синхронизация противников
  - Перекидывание предметов
  - Синхронизация мира
+ - Фикс наведения на клиентов
+ - Проверка окончания игры
+ - Удаление лишних клиентов при загрузке игры
+ 
