Increased max datagram len for now

--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,7 @@
  - Синхронизация перков
- - Лимит на длину сообщения
- - Улучшеная синхронизация инвентаря и текущего предмета
+ k Лимит на длину сообщения
+ - Улучшеная синхронизация инвентаря
+ - ...и текущего предмета
  - reliability
  + Сжатие пакетов
  - Общее хп
@@ -10,4 +11,4 @@
  - Фикс наведения на клиентов
  - Проверка окончания игры
  - Удаление лишних клиентов при загрузке игры
- 
+ - Синхронизация противников
