Kinda sync current item? Only works in one direction for some reason

--- a/todo.txt
+++ b/todo.txt
@@ -8,7 +8,8 @@
  - Синхронизация противников
  - Перекидывание предметов
  - Синхронизация мира
- - Фикс наведения на клиентов
+ ? Фикс наведения на клиентов
  - Проверка окончания игры
  - Удаление лишних клиентов при загрузке игры
- - Синхронизация противников
+ - fungal shift-ы
+ - test tangled better
