--- a/todo.txt
+++ b/todo.txt
@@ -1,15 +1,31 @@
- - Синхронизация перков
+ + Синхронизация перков
+#- ShotEffectComponent
+ - Общее хп
+ - Синхронизация хп
+ - Проверка окончания игры
+ - Удаление лишних клиентов при загрузке игры
+ 
+#- Immunities
+#- Sectors
+#- Telekenesis
+#- Unli
+
+ - Fix weird no gui mode
+
+ - Figure out what to do with one-off perks,
+ - remove perks, remove other perks
+ 
+ - Позволить менять сид мира
+ - Никнеймы игроков
  k Лимит на длину сообщения
- - Улучшеная синхронизация инвентаря
- - ...и текущего предмета
+ - Улучшеная синхронизация инвентаря и перков
+ + ...и текущего предмета
  - reliability
  + Сжатие пакетов
- - Общее хп
  - Синхронизация противников
  - Перекидывание предметов
  - Синхронизация мира
  ? Фикс наведения на клиентов
- - Проверка окончания игры
- - Удаление лишних клиентов при загрузке игры
  - fungal shift-ы
  - test tangled better
+ - poly on clients
