Kinda sync enemies

--- a/todo.txt
+++ b/todo.txt
@@ -1,14 +1,9 @@
  + Синхронизация перков
-#- ShotEffectComponent
+ k Синхронизация противников
  - Общее хп
  - Синхронизация хп
  - Проверка окончания игры
  - Удаление лишних клиентов при загрузке игры
- 
-#- Immunities
-#- Sectors
-#- Telekenesis
-#- Unli
 
  - Fix weird no gui mode
 
@@ -22,10 +17,10 @@
  + ...и текущего предмета
  - reliability
  + Сжатие пакетов
- - Синхронизация противников
  - Перекидывание предметов
  - Синхронизация мира
  ? Фикс наведения на клиентов
  - fungal shift-ы
+ - orbs sync
  - test tangled better
  - poly on clients
