Sync enemies velocity

--- a/todo.txt
+++ b/todo.txt
@@ -4,6 +4,7 @@
  - Синхронизация хп
  - Проверка окончания игры
  - Удаление лишних клиентов при загрузке игры
+ - Синхронизировать смерти противников
 
  - Fix weird no gui mode
 
