Add wallet to clients

--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,6 @@
  + Синхронизация перков
  k Синхронизация противников
+ k Синхронизация мира
  - Общее хп
  - Синхронизация хп
  - Проверка окончания игры
@@ -22,7 +23,6 @@
  - reliability
  + Сжатие пакетов
  - Перекидывание предметов
- - Синхронизация мира
  ? Фикс наведения на клиентов
  - fungal shift-ы
  - orbs sync
