Host-side damage calculation

--- a/todo.txt
+++ b/todo.txt
@@ -4,8 +4,9 @@
  - Общее хп
  - Синхронизация хп
  - Проверка окончания игры
- - Удаление лишних клиентов при загрузке игры
+ - Улучшенная синхронизация снарядов
  - Синхронизировать смерти противников
+ - Удаление лишних клиентов при загрузке игры
 
  - Fix weird no gui mode
 
