--- a/todo.txt
+++ b/todo.txt
@@ -1,8 +1,8 @@
  + Синхронизация перков
  k Синхронизация противников
  k Синхронизация мира
- - Общее хп
- - Синхронизация хп
+ + Общее хп
+ + Синхронизация хп
  - Проверка окончания игры
  - Улучшенная синхронизация снарядов
  - Синхронизировать смерти противников
