WIP enchanced firing sync

--- a/todo.txt
+++ b/todo.txt
@@ -3,8 +3,10 @@
  k Синхронизация мира
  + Общее хп
  + Синхронизация хп
- - Проверка окончания игры
+ + Проверка окончания игры
  - Улучшенная синхронизация снарядов
+   - Sync spread
+   - Sync shuffle
  - Синхронизировать смерти противников
  - Удаление лишних клиентов при загрузке игры
 
