Improved projectile sync

--- a/todo.txt
+++ b/todo.txt
@@ -4,9 +4,9 @@
  + Общее хп
  + Синхронизация хп
  + Проверка окончания игры
- - Улучшенная синхронизация снарядов
-   - Sync spread
-   - Sync shuffle
+ + Улучшенная синхронизация снарядов
+   + Sync spread
+   + Sync shuffle
  - Синхронизировать смерти противников
  - Удаление лишних клиентов при загрузке игры
 
