--- a/todo.txt
+++ b/todo.txt
@@ -7,7 +7,7 @@
  + Улучшенная синхронизация снарядов
    + Sync spread
    + Sync shuffle
- - Синхронизировать смерти противников
+ k Синхронизировать смерти противников
  - Удаление лишних клиентов при загрузке игры
 
  - Fix weird no gui mode
