--- a/todo.txt
+++ b/todo.txt
@@ -23,11 +23,12 @@
  k Лимит на длину сообщения
  - Улучшеная синхронизация инвентаря и перков
  + ...и текущего предмета
- - reliability
+ + reliability
  + Сжатие пакетов
- - Перекидывание предметов
+ + Перекидывание предметов
  ? Фикс наведения на клиентов
  - fungal shift-ы
  - orbs sync
  - test tangled better
  - poly on clients
+ - proxy: stop receiving connections before another start_game on game over, noita: try to reconnect to proxy.
