--- a/todo.txt
+++ b/todo.txt
@@ -8,7 +8,10 @@
    + Sync spread
    + Sync shuffle
  k Синхронизировать смерти противников
+ - Общее золото
  - Удаление лишних клиентов при загрузке игры
+ - intern pathnames in enemy sync
+ - Fix bottles and other items duplicating when thrown (on host?)
 
  - Fix weird no gui mode
 
@@ -18,7 +21,7 @@
  - Do something about cascading projectiles
  - Fix replicated projectiles exploding randomly
  - Sync enemies with sights
- - Позволить менять сид мира
+ + Позволить менять сид мира
  - Никнеймы игроков
  k Лимит на длину сообщения
  - Улучшеная синхронизация инвентаря и перков
